@@ -86,5 +86,7 @@ multimedia/cddb-py
 xap/leafpad
 xap/galculator
 xap/catfish
+gnome/gtkmm3
+gnome/gnote
 
 
