@@ -1,0 +1,1 @@
+gnote-*.tar.xz
