@@ -1,0 +1,12 @@
+     |-----handy-ruler------------------------------------------------------|
+gnote: gnote (note taking application)
+gnote:
+gnote: Gnote is a port of Tomboy to C++. Is is the same note taking
+gnote: application, including most of the addons. The main principle is a 
+gnote: notepad with a wiki-style interface.
+gnote: 
+gnote: 
+gnote:
+gnote: 
+gnote: 
+gnote: Package created by Niki Kovacs <info@microlinux.fr>
