@@ -1,7 +1,9 @@
-
+Sun Jan  4 11:29:37 CET 2015
 xap/leafpad-0.8.18.1-i486-1_microlinux.txz: Added.
 xap/galculator-2.1.3-i486-1_microlinux.txz: Added.
 xap/catfish-0.3.2-noarch-1_microlinux.txz: Added.
+gnome/gtkmm3-3.8.1-i486-1_SBo.txz: Added.
+gnome/gnote-3.10.3-i486-1_microlinux.txz: Added.
 +--------------------------+
 Sat Jan  3 11:56:27 CET 2015
 gnome/evince-3.12.2-i486-1_microlinux.txz: Added.
